--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,49 +12,49 @@
   "author": "Rafal Piton",
   "license": "GPL-2.0",
   "dependencies": {
-    "at.js": "^1.5.3",
-    "bootstrap": "^3.3.6",
-    "classnames": "^2.3.2",
+    "at.js": "^1.5.4",
+    "bootstrap": "^3.4.1",
+    "classnames": "^2.5.1",
     "cropit": "^0.5.1",
-    "dropzone": "^4.2.0",
-    "history": "^2.0.2",
-    "jquery": "2.2.x",
-    "jquery-mockjax": "^2.0.1",
+    "dropzone": "^4.3.0",
+    "history": "^2.1.2",
+    "jquery": "2.2.4",
+    "jquery-mockjax": "^2.6.1",
     "jquery.caret": "^0.3.1",
-    "moment": "^2.10.6",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.2.4",
-    "redux": "^3.0.5",
-    "redux-batched-actions": "^0.1.2",
-    "zxcvbn": "^4.2.0"
+    "moment": "^2.30.1",
+    "react": "^15.7.0",
+    "react-dom": "^15.7.0",
+    "react-redux": "^4.4.10",
+    "react-router": "^2.8.1",
+    "redux": "^3.7.2",
+    "redux-batched-actions": "^0.1.6",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
+    "@babel/core": "^7.24.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-react-constant-elements": "^7.18.12",
-    "@babel/plugin-transform-react-inline-elements": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/runtime": "^7.20.1",
-    "babel-loader": "^9.1.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.24.1",
+    "@babel/plugin-transform-react-inline-elements": "^7.24.1",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/runtime": "^7.24.1",
+    "babel-loader": "^9.1.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^4.2.2",
-    "eslint": "^8.26.0",
+    "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.2.0",
-    "glob": "^8.0.3",
+    "glob": "^8.1.0",
     "less": "^3.13.1",
-    "less-loader": "^11.1.0",
-    "mini-css-extract-plugin": "^2.6.1",
+    "less-loader": "^11.1.4",
+    "mini-css-extract-plugin": "^2.8.1",
     "prettier": "2.8.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.78.0",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.91.0",
     "webpack-cli": "^4.10.0"
   }
 }
